--- a/0032 - Responsive Website with CSS Grid/scss/index.scss
+++ b/0032 - Responsive Website with CSS Grid/scss/index.scss
@@ -20,8 +20,9 @@ body {
       grid-template-columns: 1fr 3fr;
       align-items: center;
 
-      i {
+      #fixed {
         display: none;
+
       }
 
       h3 {
@@ -29,7 +30,7 @@ body {
         font-size: 2rem;
       }
 
-      ul {
+      #list-item {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
         gap: 10px;
@@ -144,7 +145,7 @@ body {
           display: none;
         }
 
-        ul {
+        #list-item {
           display: grid;
           grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
           gap: 10px;
@@ -169,12 +170,22 @@ body {
         order: 1;
         margin: 10px 0;
 
-        i {
-          color: brown;
-          position: relative;
+        #fixed {
+          &.fixedOn {
+            position: fixed;
+            color: white;
+
+            &:hover {
+              color: blanchedalmond;
+            }
+          }
+
+          transition: 1s;
+          color: black;
+          position: absolute;
+          right: 60px;
           z-index: 999;
           display: block;
-          justify-self: right;
           font-size: 40px;
           transition: .3s;
           cursor: pointer;
@@ -188,17 +199,22 @@ body {
           display: none;
         }
 
-        ul {
-          background-color: black;
-          display: grid;
-          grid-template-columns: 1fr;
-          align-content: space-around;
-          gap: 10px;
-          position: absolute;
-          top: 0;
-          right: 0;
-          bottom: 0;
-          left: 0;
+        #list-item {
+          display: none;
+
+          &.toggleOn {
+            padding: 50px 0;
+            background-color: black;
+            display: grid;
+            grid-template-columns: 1fr;
+            align-content: space-around;
+            gap: 10px;
+            position: fixed;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+          }
 
 
           a {
@@ -210,7 +226,7 @@ body {
       }
 
       .main {
-        margin-top: 0;
+        margin-top: 50px;
         grid-template-areas:
           'hero hero'
           'hero hero'
