--- a/0032 - Responsive Website with CSS Grid/css/index.css
+++ b/0032 - Responsive Website with CSS Grid/css/index.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-family: 'Oswald', sans-serif;
 }
 
@@ -23,10 +23,10 @@ body .container .navbar {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 3fr;
-      grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 3fr;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 body .container .navbar #fixed {
@@ -35,8 +35,8 @@ body .container .navbar #fixed {
 
 body .container .navbar h3 {
   -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  -ms-grid-row-align: center;
+  align-self: center;
   font-size: 2rem;
 }
 
@@ -44,7 +44,7 @@ body .container .navbar #list-item {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (minmax(100px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   gap: 10px;
 }
 
@@ -69,21 +69,22 @@ body .container .navbar #list-item a:hover {
 
 body .container .navbar #list-item a li {
   -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  -ms-grid-row-align: center;
+  align-self: center;
 }
 
 body .container .main {
   -webkit-box-ordinal-group: 2;
-      -ms-flex-order: 1;
-          order: 1;
+  -ms-flex-order: 1;
+  order: 1;
   display: -ms-grid;
   display: grid;
-      grid-template-areas: 'hero hero feature1' 'hero hero feature2';
+  grid-template-areas: 'hero hero feature1'
+    'hero hero feature2';
   -ms-grid-columns: ()[1fr];
-      grid-template-columns: repeat(1fr);
+  grid-template-columns: repeat(1fr);
   -ms-grid-rows: 30vh 30vh;
-      grid-template-rows: 30vh 30vh;
+  grid-template-rows: 30vh 30vh;
   gap: 5px;
 }
 
@@ -101,11 +102,11 @@ body .container .main .hero {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   color: white;
   padding: 0 20px;
 }
@@ -134,15 +135,15 @@ body .container .main .feature {
   color: white;
   text-shadow: 0px 0px 7 px black;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 body .container .main .feature h4 {
@@ -175,22 +176,25 @@ body .container .main .feature2 {
 @media only screen and (max-width: 1200px) {
   body .container .navbar {
     -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
     -webkit-box-ordinal-group: 3;
-        -ms-flex-order: 2;
-            order: 2;
+    -ms-flex-order: 2;
+    order: 2;
     margin-top: 20px;
   }
+
   body .container .navbar h3 {
     display: none;
   }
+
   body .container .navbar #list-item {
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: (minmax(100px, 1fr))[auto-fit];
-        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     gap: 10px;
   }
+
   body .container .main {
     margin-top: 3rem;
   }
@@ -199,12 +203,13 @@ body .container .main .feature2 {
 @media only screen and (max-width: 800px) {
   body .container .navbar {
     -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
     -webkit-box-ordinal-group: 2;
-        -ms-flex-order: 1;
-            order: 1;
+    -ms-flex-order: 1;
+    order: 1;
     margin: 10px 0;
   }
+
   body .container .navbar #fixed {
     -webkit-transition: 1s;
     transition: 1s;
@@ -218,31 +223,37 @@ body .container .main .feature2 {
     transition: .3s;
     cursor: pointer;
   }
+
   body .container .navbar #fixed.fixedOn {
     position: fixed;
     color: white;
   }
+
   body .container .navbar #fixed.fixedOn:hover {
     color: blanchedalmond;
   }
+
   body .container .navbar #fixed:hover {
     color: white;
   }
+
   body .container .navbar h3 {
     display: none;
   }
+
   body .container .navbar #list-item {
     display: none;
   }
+
   body .container .navbar #list-item.toggleOn {
     padding: 50px 0;
     background-color: black;
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
     -ms-flex-line-pack: distribute;
-        align-content: space-around;
+    align-content: space-around;
     gap: 10px;
     position: fixed;
     top: 0;
@@ -250,6 +261,7 @@ body .container .main .feature2 {
     bottom: 0;
     left: 0;
   }
+
   body .container .navbar #list-item a {
     height: -webkit-max-content;
     height: -moz-max-content;
@@ -257,9 +269,14 @@ body .container .main .feature2 {
     width: 100%;
     font-size: 3rem;
   }
+
   body .container .main {
     margin-top: 50px;
-        grid-template-areas: 'hero hero' 'hero hero' 'feature1 feature1' 'feature2 feature2';
+    grid-template-areas: 'hero hero'
+      'hero hero'
+      'feature1 feature1'
+      'feature2 feature2';
   }
 }
+
 /*# sourceMappingURL=index.css.map */
