--- a/0030 - Responsif Portofolio/style1.css
+++ b/0030 - Responsif Portofolio/style1.css
@@ -174,6 +174,6 @@ a {
         margin-left: 5%;
         line-height: 2em;
         z-index: 1;
-        background-color: blue;
+        /* background-color: blue; */
     }
 }
